# qt_browser

./: CMakeLists.txt  answerwindow.cpp  answerwindow.h  browser.cpp  browser.h  main.cpp
